--- a/summer-delays-nyc/index.html
+++ b/summer-delays-nyc/index.html
@@ -26,9 +26,12 @@
     </div>
 
     <div class="story-body">
-      <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
-      <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
-      <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
+      <p class="body-text serif">Knowing that LaGuardia airport is under construction, Vaska Tsiolkovsky planned to arrive four hours in advance on Aug. 19 for his Air Canada flight to Toronto. It was a smart idea –– his terminal’s drop-off area was closed, his Uber ride cost $30 more after re-routing, and he sat in the traffic jam close to an hour.</p>
+      <p class="body-text serif">He ended up walking from the street to the terminal and had three hours to spare. But a thunderstorm delayed his flight for over two hours. He missed his connecting flight to Edmonton, his final destination, twice.</p>
+      <p class="body-text serif">“Our airline bumped us to a later flight to accommodate the delay but we missed that one as well,” Tsiolkovsky said. “We ended up traveling just under 24 hours.”</p>
+      <p class="body-text serif">The Port Authority’s four airports – John F. Kennedy International, Newark Liberty International, LaGuardia and New York Stewart International airports – handled more passengers in June 2019 than any other June on record, reaching an all-time high of roughly 12.79 million passengers, up from 12.67 million last June. </p>
+      <p class="body-text serif">Record numbers of passengers, relentless thunderstorms and multiple runway closures have spurred more delays and cancellations at New York area airports in June than during the same time last year. According to the latest data from the US Department of Transportation, more flights were cancelled or delayed that month, while on-time performance rates went downhill across Newark, JFK and LaGuardia. </p>
+
 
       <div class="chart-section">
         <div class="chart-row">
@@ -39,9 +42,8 @@
         <p class="chart-source">Source: US Department of Transportation</p>
       </div>
 
-      <h3 class="section-head serif">This is what a section hed looks like</h3>
-      <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
-      <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
+      <p class="body-text serif">Summer is peak travel season, but what’s different this year? Runway construction mixed with more thunderstorms. JFK and Newark each closed one of its runways for repairs this season. Ben Granucci, director and senior editor of NYCAviation, a regional consulting firm, said that in ideal weather conditions, the effect of closures can be minimal. But if the wind is too strong or a thunderstorm approaches, a lot of things could go wrong.</p>
+      <p class="body-text serif">“In the wrong conditions, the airport can be forced to use a single runway for all takeoffs and landings,” he said. JFK has four runways and Newark has three.</p>
     </div>
     <div class="chart-section">
       <div class="chart-row">
@@ -55,10 +57,11 @@
     </div>
     </div>
     <div class="story-body">
-      <h3 class="section-head serif">Another section head</h3>
-      <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
-      <p class="body-text serif">Nulla purus velit, ultricies sed orci nec, mollis venenatis ligula. Integer euismod urna eu nulla semper varius. Vestibulum pulvinar, velit et ornare ullamcorper, ligula libero tempus tortor, et congue libero nisi nec lorem. Etiam vestibulum molestie nibh, et pulvinar eros efficitur a. Vivamus et nisl vel est venenatis hendrerit ac non felis. Vestibulum id malesuada lectus. Praesent mi dolor, aliquam in felis id, ultricies molestie nisi.</p>
-      <p class="body-text serif">Aenean porta, urna venenatis venenatis pretium, mi neque faucibus ex, ac sollicitudin neque justo et felis. Sed vitae ornare metus, id dapibus sapien. Duis lobortis rhoncus dictum. Aliquam sodales, eros et pharetra ultricies, erat lectus convallis purus, sit amet ultricies odio tortor eu ligula.</p>
+      <p class="body-text serif">Moreover, Granucci said, bad weather at JFK can limit flights arriving and departing at Newark or LaGuardia, even if it is bright and sunny there. This happens because the three major airports share the airspace, causing a traffic jam in the sky.</p>
+      <p class="body-text serif">“Thunderstorms miles away can cause just as many problems,” he said. “When one of the air routes is blocked by a storm, it is closed to all air traffic.”</p>
+      <p class="body-text serif">Airlines have particularly struggled against bad weather this summer. June experienced more weather-related delays than any June since 2013 –– 65 percent of delays and cancellations were attributed to weather conditions, up from 60 percent last year.</p>
+      <p class="body-text serif">Tensions amid delays reached a breaking point on Aug. 15, when passengers on a JFK flight to Miami were stuck on the delayed Delta flight for nearly 8 hours due to bad weather. Police were summoned after fights broke out on the plane. One passenger wrote on Twitter that the fights had gotten verbal and physical.</p>
+
     
     <div class="chart-section">
       <div class="chart-row">
@@ -69,9 +72,9 @@
       <p class="chart-source">Source: US Department of Transportation</p>
     </div>
     <div class="story-body">
-      <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
-      <p class="body-text serif">Nulla purus velit, ultricies sed orci nec, mollis venenatis ligula. Integer euismod urna eu nulla semper varius. Vestibulum pulvinar, velit et ornare ullamcorper, ligula libero tempus tortor, et congue libero nisi nec lorem. Etiam vestibulum molestie nibh, et pulvinar eros efficitur a. Vivamus et nisl vel est venenatis hendrerit ac non felis. Vestibulum id malesuada lectus. Praesent mi dolor, aliquam in felis id, ultricies molestie nisi.</p>
-      <p class="body-text serif">Aenean porta, urna venenatis venenatis pretium, mi neque faucibus ex, ac sollicitudin neque justo et felis. Sed vitae ornare metus, id dapibus sapien. Duis lobortis rhoncus dictum. Aliquam sodales, eros et pharetra ultricies, erat lectus convallis purus, sit amet ultricies odio tortor eu ligula.</p>
+      <p class="body-text serif">Newark’s on-time departure and arrival rates in June ranked the lowest since at least June 2010, while cancelled and delayed flights reached a nine-year record high. Newark experienced the largest drop in on-time departures with 9 percentage points from 73% to 64%, with 4% of flights cancelled. On-time arrival performance also decreased by 6 percentage points. </p>
+      <p class="body-text serif">“In a system like New York, which is operating at a very high-level capacity, during a peak period, you have more chance for delays and for things to go wrong,” said Eliot Lees, vice-president of ICF, a global aviation consulting firm. </p>
+      <p class="body-text serif">Lees said airports have historically expanded infrastructure to accommodate seasonal surges.  The activity in the summer is about 15 and 20 percent higher than winter, he said. But even if flights land on time at New York airports, there may be a limited number of gates to accommodate aircraft. There is a serious shortage of gates at the three metro area airports, he added.</p>
     
     <div class="chart-section">
       <div class="chart-row">
@@ -81,6 +84,12 @@
       </div>
       <p class="chart-source">Source: US Department of Transportation</p>
     </div>
+    <div class="story-body">
+      <p class="body-text serif">Other cities like Denver have airports with nine runways and can operate huge amounts of traffic without delays. But limited land availability in the New York and New Jersey’s urban areas hinder any viable plans for additional runway construction.  </p>
+      <p class="body-text serif">“They are reaching the limits of what they can serve,” Lees said. “It's not clear whether this is 10 years or 20 years from now, but at some point in the future, the shortage of runways will limit the air travel in the New York market.”  </p>
+      <p class="body-text serif">Departure on-time performance in June at LaGuardia also ranked the lowest since 2010, with an 8 percentage point drop, a nuisance Tsiolkovsky witnessed firsthand. After finding dinner on a vending machine, he and his friend slept a few hours in a couch they found in the lounge area after landing in Calgary. </p>
+      <p class="body-text serif">“It was definitely exhausting,” he said. “We felt like zombies by the end of the ordeal.”</p>
+
 
 
     <div class="footer">
