--- a/summer-delays-nyc/index.html
+++ b/summer-delays-nyc/index.html
@@ -91,9 +91,10 @@
       <p class="body-text serif">“It was definitely exhausting,” he said. “We felt like zombies by the end of the ordeal.”</p>
 
 
-
+<!-- 
     <div class="footer">
-      <p class="note">Note: Any end notes can go here.</p>
-    </div>
+      <h3>Data and Methodology</h3>
+      <p class="note">I downloaded data from the Bureau of Transportation Statistics and used Python's matplotlib</p>
+    </div> -->
   </body>
 </html>
