--- a/homework-1/template.html
+++ b/homework-1/template.html
@@ -262,11 +262,11 @@
   <body class="light-theme"> <!-- all of the content on your html page goes inside the body -->
 
     <div class="header">
-      <p class="kicker">Optional kicker</p>
-      <h1 class="headline">Here is your headline</h1>
-      <h2 class="subhead">This is the subhead</h2>
-      <p class="byline">By YOUR NAME</p>
-      <p class="date">Published September 9, 2019</p>
+      <p class="kicker"></p>
+      <h1 class="headline">Trump lowers fines against Texas nursing homes</h1>
+      <h2 class="subhead">Encouraged by the health care sector, President Donald J. Trump started to rollback Obama-era regulations mid-2017.</h2>
+      <p class="byline">By Elena Mejia</p>
+      <p class="date">Published September 11, 2019</p>
     </div>
 
     <div class="story-body">
@@ -274,9 +274,9 @@
       <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
-    <div class="chart-section">
+    <!-- <div class="chart-section">
         <div class="chart-row">
-          <div class="chart">
+          <div class="chart"> -->
 
 
 
@@ -612,7 +612,7 @@
         </div>
         </div>
     </div>
-
+<br>
     <div class="story-body">
         <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
