--- a/nursing-homes-texas/index.html
+++ b/nursing-homes-texas/index.html
@@ -12,15 +12,15 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700&display=swap" rel="stylesheet">
       
-    <title>Lede page</title>
+    <title>Nursing Home Fines</title>
   </head>
 
   <body class="light-theme"> <!-- all of the content on your html page goes inside the body -->
 
     <div class="header">
-      <p class="kicker">How are nursing homes being fined?</p>
+      <p class="kicker">Health Care</p>
       <h1 class="headline">Nursing Homes in Texas</h1>
-      <h2 class="subhead">State inspectors issue civil penalties against nursing homes found to be out-of-compliance with Medicare, endangering the health and safety of their vulnerable residents. But how are fines being issued?</h2>
+      <h2 class="subhead">State inspectors issue civil penalties against nursing homes out-of-compliance with Medicare, endangering the health and safety of their vulnerable residents. But how are fines being issued?</h2>
       <p class="byline">By Elena Mejia</p>
       <p class="date">Published July 22, 2019</p>
     </div>
@@ -29,16 +29,16 @@
       <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
       <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
       <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
-    </div> 
+    <!-- </div>  -->
       <div class="chart-section">
         <div class="chart-row">
           <div class="chart">
             <div id="chart1">
-              <img src="images/nursinghomesfinesfinal-01.png"/>
+              <img src="images/scatterplot.jpg"/>
             </div>
           </div>
         </div>
-    </div> -->
+    </div> 
     <div class="story-body">
       <h3 class="section-head serif">Another section head</h3>
       <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
@@ -49,15 +49,14 @@
   <div class="chart-section1">
     <div class="chart-row1">
       <div class="chart">
-        <img src="images/nursinghomeshighestfinesfinal-01.png"/>
+        <img src="images/nursinghomeshighestfinesfinal.jpg"/>
       </div>
       <div class="chart">
-        <img src="images/nursinghomescomplaintsfinal-01.png"/>
+        <img src="images/nursinghomescomplaintsfinal.jpg"/>
       </div>
     </div>
   </div>
     <div class="story-body">
-        <h3 class="section-head serif">Another section head</h3>
         <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
         <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
         <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
@@ -65,12 +64,26 @@
           <div class="chart-row2">
             <div class="chart">
               <div id="chart2">
-                <img src="images/nursinghomesdeficienciesfinal-01.png"/>
+                <img src="images/map copy.jpg"/>
               </div>
             </div>
           </div>
         </div>
     </div>
+    <div class="story-body">
+      <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
+      <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
+      <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
+      <div class="chart-section2">
+        <div class="chart-row2">
+          <div class="chart">
+            <div id="chart2">
+              <img src="images/nursinghomesfinesfinal.jpg"/>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 <br>
     <div class="story-body">
           <p class="chart-title">Data and Methodology</p>
