--- a/summer-delays-nyc/index.html
+++ b/summer-delays-nyc/index.html
@@ -36,7 +36,7 @@
       <div class="chart-section">
         <div class="chart-row">
           <div class="chart">
-            <img src="images/heatmap2-01.png"/>
+            <img src="images/heatmap1-01.jpg"/>
           </div>
         </div>
         <p class="chart-source">Source: US Department of Transportation</p>
@@ -48,7 +48,7 @@
     <div class="chart-section">
       <div class="chart-row">
         <div class="chart">
-          <img src="images/bigassgraph-01.png"/>
+          <img src="images/bigassgraph-01.jpg"/>
         </div>
         <!-- <div class="chart">
           <img src="images/newarkcancelleddelayed-01.png"/>
@@ -69,7 +69,6 @@
           <img src="images/heatmap1-01.png"/>
         </div>
       </div>
-      <p class="chart-source">Source: US Department of Transportation</p>
     </div>
     <div class="story-body">
       <p class="body-text serif">Newark’s on-time departure and arrival rates in June ranked the lowest since at least June 2010, while cancelled and delayed flights reached a nine-year record high. Newark experienced the largest drop in on-time departures with 9 percentage points from 73% to 64%, with 4% of flights cancelled. On-time arrival performance also decreased by 6 percentage points. </p>
@@ -79,10 +78,9 @@
     <div class="chart-section">
       <div class="chart-row">
         <div class="chart">
-          <img src="images/newarkcancelleddelayed-01.png"/>
+          <img src="images/slopegraph.jpg"/>
         </div>
       </div>
-      <p class="chart-source">Source: US Department of Transportation</p>
     </div>
     <div class="story-body">
       <p class="body-text serif">Other cities like Denver have airports with nine runways and can operate huge amounts of traffic without delays. But limited land availability in the New York and New Jersey’s urban areas hinder any viable plans for additional runway construction.  </p>
