--- a/connecticut-opioid-deaths/index.html
+++ b/connecticut-opioid-deaths/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700&display=swap" rel="stylesheet">
       
-    <title>Lede page</title>
+    <title>Opioid Deaths in Connecticut</title>
   </head>
 
   <body class="light-theme"> <!-- all of the content on your html page goes inside the body -->
@@ -31,14 +31,11 @@
       <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
 
       <div class="chart-section">
-        <p class="chart-title">If not in their homes, where are people overdosing?</p>
-        <p class="chart-subhead">This is a standard, single chart which fits in the same width as the story.</p>
         <div class="chart-row">
           <div class="chart">
-              <img src="images/commonplacesoverdose.png"/>
+              <img src="images/commonplacesoverdose.jpg"/>
           </div>
         </div>
-        <p class="chart-source">Source: Connecticut Office of Policy and Management</p>
       </div>
     </div>
 
@@ -48,27 +45,21 @@
         <p class="body-text serif">Vivamus sagittis massa urna, nec condimentum enim tristique at. Mauris a erat quis diam pretium scelerisque a vel dolor. Etiam pulvinar laoreet gravida. Quisque consectetur, arcu non tempor pharetra, tortor massa rhoncus arcu, id vulputate tellus lectus ut elit.</p>
   
       <div class="chart-section">
-        <p class="chart-title">Overdose Deaths and Gender</p>
-        <p class="chart-subhead">This is a standard, single chart which fits in the same width as the story.</p>
         <div class="chart-row">
           <div class="chart">
-              <img src="images/gender-01.png"/>
+              <img src="images/boxplot.jpg"/>
           </div>
         </div>
-        <p class="chart-source">Source: Connecticut Office of Policy and Management</p>
       </div>
     </div>
     <div class="story-body">
       <h3 class="section-head serif">White Males Dominate Overdose Deaths</h3>
         <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
         <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
-    </div>
   <div class="chart-section">
-    <!-- <p class="chart-title">How Many People Actually Reach the Hospital?</p>
-    <p class="chart-subhead">You can put two charts side by side by putting two .chart divs inside the .chart-row div.</p> -->
-    <div class="chart-row">
-      <div class="chart">
-        <img src="images/placeofdeathmalesfinal-01.png"/>
+    <div class="chart-row2">
+      <div class="chart2">
+        <img src="images/sankey.jpg"/>
       </div>
     </div>
     <div class="story-body">
