--- a/connecticut-opioid-deaths/index.html
+++ b/connecticut-opioid-deaths/index.html
@@ -52,9 +52,8 @@
         </div>
       </div>
     </div>
-    
+
     <div class="story-body">
-      <h3 class="section-head serif">White Males Dominate Overdose Deaths</h3>
         <p class="body-text serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
         <p class="body-text serif">In ut egestas velit, non porta sapien. Nam quis magna luctus, fermentum nunc quis, ullamcorper neque. Morbi eget risus neque. Integer a tellus in lorem dapibus rutrum. Sed ut sapien libero. Cras rutrum semper aliquam. Donec in dignissim velit.</p>
   <div class="chart-section">
@@ -64,21 +63,11 @@
       </div>
     </div>
     <div class="story-body">
-        <div class="chart-section">
-            <p class="chart-title">Data and Methodology</p>
-            <p class="chart-subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus sapien, tincidunt ac bibendum eget, cursus vel mi. Sed cursus tincidunt rutrum. Quisque auctor ut erat ut rhoncus. Nam vel neque mauris. Sed vel ex justo. Duis et sagittis dolor. In at auctor libero. Quisque at nisi quis elit tempus placerat.</p>
-          </div>
-  
-    <!-- <p class="chart-source">Source: Connecticut Office of Policy and Management</p>
-  <div class="chart-section">
-    <p class="chart-title">How Many People Actually Reach the Hospital?</p>
-    <p class="chart-subhead">You can put two charts side by side by putting two .chart divs inside the .chart-row div.</p> -->
-    <!-- <div class="chart-row">
-      <div class="chart">
-        <img src="images/placeofdeathfemales-01.png"/>
+      <p class="chart-source"><h4>Data and Methodology</h4></p>
+      <p class="chart-source">The data was downloaded from the Centers for Medicare and Medicaid Services, where they publish the information for each nursing home in terms of five-star ratings, inspections, and penalties. </p>
+      <br>
+      <p class="chart-source">Tools used: Python (pandas, regular expressions), matplotlib, Microsoft Excel, Adobe Illustrator, HTML, CSS.</p>
       </div>
-    </div> -->
-      <p class="chart-source">Sources: Connecticut Office of Policy and Management</p>
-  <!-- </div> -->
+<!-- </div> -->
   </body>
 </html>
